--- a/Eclipse_WS/Training/pom.xml
+++ b/Eclipse_WS/Training/pom.xml
@@ -19,6 +19,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
+
 	<dependencies>
 
 		<dependency>
@@ -106,6 +107,16 @@
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven
 			defaults (may be moved to parent pom) -->
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.2.5</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>Regression.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
 				<!-- clean lifecycle, see
 				https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
 				<plugin>
